--- a/MachineLearningTF/MachineLearningTF.csproj
+++ b/MachineLearningTF/MachineLearningTF.csproj
@@ -8,9 +8,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CsvHelper" Version="31.0.2" />
     <PackageReference Include="Plotly.NET" Version="4.2.0" />
     <PackageReference Include="Plotly.NET.CSharp" Version="0.11.1" />
     <PackageReference Include="Plotly.NET.Interactive" Version="4.2.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Data\blobs.csv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
