--- a/MachineLearningTF/MachineLearningTF.csproj
+++ b/MachineLearningTF/MachineLearningTF.csproj
@@ -9,9 +9,11 @@
 
   <ItemGroup>
     <PackageReference Include="CsvHelper" Version="31.0.2" />
+    <PackageReference Include="NumSharp" Version="0.30.0" />
     <PackageReference Include="Plotly.NET" Version="4.2.0" />
     <PackageReference Include="Plotly.NET.CSharp" Version="0.11.1" />
     <PackageReference Include="Plotly.NET.Interactive" Version="4.2.1" />
+    <PackageReference Include="ShellProgressBar" Version="5.2.0" />
   </ItemGroup>
 
   <ItemGroup>
